force-app/main/default/objects/DMAPP__Team_View_Plus_Views__c/DMAPP__Team_View_Plus_Views__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The list of reports and configurations to be used by Team View+</description>
    <label>Dealmaker Team View+ Views</label>
</CustomObject>