force-app/main/default/objects/DMAPP__Team_View_Plus_Views__c/fields/DMAPP__Report_Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Report_Amount_Field__c</fullName>
    <description>If the report uses an Amount field other than AMOUNT, it should be specified here.</description>
    <label>Report Amount Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>