force-app/main/default/objects/DMAPP__Team_View_Plus_Views__c/fields/DMAPP__Report_Dealmaker_Opportunity_Field__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Report_Dealmaker_Opportunity_Field__c</fullName>
    <label>Report Dealmaker Opportunity Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>