force-app/main/default/objects/DMAPP__Team_View_Plus_Views__c/fields/DMAPP__Report_Stage_Field__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Report_Stage_Field__c</fullName>
    <label>Stage Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>